kubernetes/k3s-prod/apps/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-dns-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin-prod.70ld.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 5050
  tls:
    - hosts:
        - pgadmin-prod.70ld.dev
      secretName: pgadmin-tls
